zz-k8s-rpi-apps-deprecated/argocd-apps-deprecated/k8s-rpi-networkpolicies/home-assistant-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: home-assistant-np
  namespace: home-assistant
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-v2
  policyTypes:
    - Ingress
